# Statins_Efficacy

./: .gitignore  LICENSE  README.md  component_specifications.md  environment.yml  project.toml  pyproject.toml  use_cases.md  user_stories.md
data/: clients.csv  food_cov.csv
doc/: use_cases.md  user_stories.md
maxstat/: metadata_describe.py  plot_metadata.py  regression.py
test/: test_metadata_describe.py  test_regression.py
